<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL" Id="{c6087ffb-c2ad-4305-88ac-d642331cf384}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Acontrolword  AT%Q*:ARRAY[1..1]OF UINT;
	
	SetActualVelocity AT%Q*:ARRAY[1..1]OF DINT;
	SetUnitmode AT%Q*:ARRAY[1..1]OF BYTE;
	
	
	
	Astatusword AT%I*:ARRAY[1..1]OF UINT;
	readActualpostion AT%I*:ARRAY[1..1]OF DINT;
	readActualCurrent AT%I*:ARRAY[1..1]OF UINT;
	readIOStatus AT%I*:ARRAY[1..1]OF DINT;
	
	bigarm_position:LREAL;
	middlearm_position:LREAL;
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>